# qsim

./: .bazelrc  .dockerignore  .geminiignore  CMakeLists.txt  Dockerfile  dev-requirements.txt  foo.py  pyproject.toml  requirements.txt  run_sim.py  setup.py  test_540.py  test_identity.py
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  3-question.yml  4-task.yml
.github/workflows/: bazeltest.yml  ci-avx-sse-mp-tests.yaml  ci-sanitizer-tests.yaml  ci-tcmalloc-test.yaml  ci.yaml  ci_build_library.yaml  ci_docker_tests.yaml  ci_format_checks.yml  ci_hardware_options.yaml  ci_sanitizer_tests.yaml  ci_tcmalloc_test.yaml  cirq_compatibility.yml  dependabot-body-cleaner.yaml  dependabot-pr-cleaner.yaml  dockertest.yml  find_changes.yaml  pr-labeler.yaml  python_format.yml  reusable_build_wheels.yaml  reusable_find_changes.yaml  scorecard-scanner.yaml  test_changes.yaml  testing_wheels.yml
apps/: qsim_amplitudes.cc  qsim_base.cc  qsim_von_neumann.cc  qsimh_amplitudes.cc  qsimh_base.cc
dev_tools/: clean_dependabot_body.py  clean_dependabot_body_test.py  test_libs.sh
dev_tools/ci/: dependabot_pr_description_cleaner.py  dependabot_pr_description_cleaner_test.py
install/tests/: Dockerfile
lib/: run_qsim.h  util_cpu.h
pybind_interface/: Dockerfile  GetPybind11.cmake  pybind_main.cpp
pybind_interface/cuda/: pybind_main_cuda.cpp
pybind_interface/custatevec/: pybind_main_custatevec.cpp
pybind_interface/custatevecex/: pybind_main_custatevecex.cpp
pybind_interface/hip/: pybind_main_hip.cpp
qsimcirq/: qsim_circuit.py
qsimcirq_tests/: denormals_are_zeros_test.py  qsimcirq_test.py
