# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = [
  "packaging",
  "setuptools>=78.1.1",
  "wheel",
  "pybind11[global]",
  # "pip install" from sources needs to build Pybind, which needs CMake too.
  "cmake~=3.28.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "qsimcirq"
version = "0.23.0.dev0"
description = "Schrödinger and Schrödinger-Feynman simulators for quantum circuits."
readme = "README.md"
authors = [{ name = "The qsim/qsimh Developers", email = "qsim-qsimh-dev@googlegroups.com" }]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Quantum Computing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = [
    "algorithms",
    "api",
    "application programming interface",
    "cirq",
    "google quantum",
    "google",
    "nisq",
    "python",
    "quantum algorithm development",
    "quantum circuit simulator",
    "quantum computer simulator",
    "quantum computing",
    "quantum computing research",
    "quantum programming",
    "quantum simulation",
    "quantum",
    "schrödinger-feynman simulation",
    "sdk",
    "simulation",
    "state vector simulator",
    "software development kit",
]
requires-python = ">=3.10.0"
dependencies = [
    "absl-py",
    "cirq-core~=1.0",
    "numpy>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/quantumlib/qsim"

[project.optional-dependencies]
dev = [
    "cmake~=3.28.1",
    "black~=25.9.0",
    "flynt~=1.0",
    "isort[colors]~=6.0.1",
    "pybind11[global]",
    "pylint~=4.0.2",
    "pytest",
    "pytest-xdist",
    "py-cpuinfo",
    "setuptools>=78.1.1",
]

[tool.setuptools]
packages = ["qsimcirq"]
package-data = {"qsimcirq" = ["py.typed"]}

[tool.cibuildwheel]
test-extras = "dev"
dependency-versions = "latest"
enable = ["cpython-prerelease"]
environment.PIP_PREFER_BINARY = "1"
# Due to package & module name conflict, temporarily move it away to run tests:
before-test = "mv {package}/qsimcirq /tmp"
test-command = "pytest -s -v {package}/qsimcirq_tests/qsimcirq_test.py && mv /tmp/qsimcirq {package}"

[tool.cibuildwheel.macos]
before-build = "brew install -q libomp llvm@19 && brew unlink libomp && brew unlink llvm@19 && brew link --force libomp && brew link --force llvm@19"
repair-wheel-command = "delocate-listdeps {wheel} && delocate-wheel --verbose --require-archs {delocate_archs} -w {dest_dir} {wheel}"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
skip = "*musllinux*"

[tool.black]
target-version = ['py310', 'py311', 'py312', 'py313']
extend-exclude = 'third_party'
